<resources>

    <string name="app_name">Virtual Mobile Vending</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Vending Login</string>

    <!-- Strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="terms">The Agent Accepts the Terms and Conditions of Usage.</string>
    <string name="terms_accept">I accept the Terms and Conditions of Usage.</string>
    <string name="submit">Submit</string>
    <string name="fullname">Full Name</string>
    <string name="sur_name">Sur Name</string>
    <string name="id_passport">Id/Passport</string>
    <string name="mobile_number">Mobile</string>
    <string name="register">Register Now</string>
    <string name="agent_registration">Agent Registration</string>
    <string name="clickto_vend_service">Click to Vend Service</string>

    <!-- Color Values ! -->
    <color name="black">#000000</color>
    <color name="opaqueBlack">#161616</color>
    <color name="transperant">#00000000</color>
    <color name="lightGreen">#2fc176</color>
    <color name="whiteColor">#ffffff</color>
    <color name="offBlack">#606060</color>
    <color name="buttonBackgroundLight">#8c8a8d</color>

    <string name="title_activity_main_menu">Virtual Mobile Vending</string>
    <string name="title_activity_user_specific_pin">Virtual Mobile Vending</string>
    <string name="title_activity_vendor">Virtual Mobile Vending</string>
    <string name="title_activity_vendor_item">Virtual Mobile Vending</string>
    <string name="title_activity_confirm">Virtual Mobile Vending</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_printer_demo">PrinterDemoActivity</string>

</resources>