<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/offBlack" 
    android:orientation="vertical">

    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/offBlack">
        <ImageView 
            android:src="@drawable/ic_launcher"
            android:layout_width="60dp"
            android:layout_height="60dp"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="The Company Name"
            android:layout_gravity="center_vertical"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="@color/lightGreen"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:background="@color/offBlack">
        	<TextView 
        	    android:text="@string/username"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:textColor="@color/black"/>
        	<EditText 
        	    android:id="@+id/textUserName"
        	    android:layout_width="200dp"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="12dp"
        	    android:padding="6dp"
        	    android:textColor="@color/black"
        	    android:background="@drawable/round_background_black"/>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:background="@color/offBlack">
        	<TextView 
        	    android:text="@string/password"
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:textColor="@color/black"/>
        	<EditText 
        	    android:id="@+id/textPassword"
        	    android:layout_width="200dp"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="12dp"
        	    android:padding="6dp"
        	    android:inputType="textPassword"
        	    android:textColor="@color/black"
        	    android:background="@drawable/round_background_black"/>
    </LinearLayout>
   
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/offBlack">
        	<Button 
        	    android:id="@+id/loginButton"
        	    android:text="@string/login"
        	    android:layout_width="100dp"
        	    android:layout_height="wrap_content"
        	    android:paddingLeft="15dp"
        	    android:paddingRight="15dp"
        	    android:textColor="@color/black"
        	    android:textStyle="bold"
        	    android:background="@drawable/button_background_light"/>
        	<Button 
        	    android:id="@+id/signupButton"
        	    android:text="@string/sign_up"
        	    android:layout_width="100dp"
        	    android:layout_height="wrap_content"
        	    android:layout_marginLeft="12dp"
        	    android:paddingLeft="15dp"
        	    android:paddingRight="15dp"
        	    android:textColor="@color/black"
        	    android:textStyle="bold"
        	    android:background="@drawable/button_background_light"/>
    </LinearLayout>
     
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/offBlack">
        	<!-- <TextView 
        	    android:layout_width="wrap_content"
        	    android:layout_height="wrap_content"
        	    android:gravity="left"
        	    android:background="@color/opaqueBlack"
        	    android:textSize = "16dp"
        	    android:padding="8dp"
        	    android:text="@string/terms"/>
        	 !-->
    </LinearLayout>

</LinearLayout>
